# QuietStories

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  API_TESTING_GUIDE.md  CHANGELOG_OPTIMIZATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  GRAFANA_INTEGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LMSTUDIO_SETUP.md  LOCAL_EMBEDDINGS.md  LOGGING.md  OPTIMIZATION_GUIDE.md  PERFORMANCE.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PROVIDER_STRATEGY.md  ProjectInfo.md  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  SETUP_SUMMARY.md  SIMPLIFIED_SCENARIOS.md  SUPPORT.md  api_test.py  debug_examples.py  docker-compose.logging.yml  docker-compose.prod.yml  docker-compose.yml  draft.md  env.example  plan.md  pyproject.toml  requirements.txt  rev.md  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: git-strategy.instructions.md
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  Dockerfile  config.py  main.py  prompts.py  requirements.txt
backend/api/: __init__.py  optimization.py  prompts.py  scenarios.py  sessions.py  settings.py
data/: .gitkeep
frontend/: .dockerignore  Dockerfile  FRONTEND_README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
logging/: loki-config.yml  promtail-config.yml
scripts/: deploy.sh  logging.sh  start-app.sh
src/: __init__.py  config.py  main.py  prompts.py
tests/: test_no_nouns.py  test_schemas.py
(+97 files in other folders)
