[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiet-stories"
version = "0.1.0"
description = "Dynamic CYOA Engine - Generate interactive stories from free text"
authors = [{name = "QuietStories Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "jsonschema",
    "jsonlogic-py",
    "python-multipart",
    "python-dotenv",
    "sse-starlette",
    "langchain",
    "langchain-openai",
    "langchain-community",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
